[package]
name = "frc_netword_communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asm = "0.3.0"
net_comm ={ path = "./net_comm" }
robot_comm = { path = "./robot_comm" }
eframe = "*"
gilrs = "*"
stick = "0.13"
smol = "*"
pasts = "0.8"
tokio = "*"

[workspace]
members = [
    "util",
    "robot_comm",
    "net_comm",
    "driverstation"
]

resolver = "2"
