[package]
name = "frc_network_communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net_comm ={ path = "./net_comm" }
robot_comm = { path = "./robot_comm" }
eframe = "*"
gilrs = "*"
gilrs-core = "*"
bitfield = "*"
uuid = "1.3.0"
sysinfo = "*"
roborio = {path = "./roborio"}
atomic = "*"

[workspace]
members = [
    "terminal_roborio",
    "util",
    "robot_comm",
    "net_comm",
    "driverstation",
    "roborio",
]

resolver = "2"
