[package]
name = "roborio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
robot_comm = { path = "../robot_comm" }
net_comm = { path = "../net_comm" }
rclite = "*"
spin = "*"

[features]
